style: Adds styling to individual restaurant pages - Updates to use flexbox for columns - Styles individual review boxes - Fixes overlap of reviews and map - Sets fixed positioning for map, footer, and header

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body,td,th,p {
 	line-height: 14px;
 }
 body {
-	background-color: #fdfdfd;
+	background-color: #f3f3f3;
 	margin: 0;
 	position:relative;
 }
@@ -34,18 +34,22 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-#maincontent {
-  background-color: #f3f3f3;
-  min-height: 100%;
+.inside #footer {
+	bottom: 0%;
+  position: fixed;
+	width: 100%;
+	z-index: 3;
 }
 #footer {
   background-color: #444;
-  color: #aaa;
-  font-size: .8em;
+  color: #fff;
+  font-size: 1.1em;
+	line-height: 1.5em;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+	position: relative;
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -69,12 +73,11 @@ nav h1 a {
 }
 
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 1.2em;
-    margin: 0;
-    width: calc(50% - 80px);
+  padding: 15px 0 15px 20px;
+  list-style: none;
+  background-color: #eee;
+  font-size: 1.2em;
+  margin: 0;
 }
 
 /* Display list items side by side */
@@ -84,22 +87,23 @@ nav h1 a {
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
+  color: #21b5d6;
+  text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+  color: #01447e;
+  text-decoration: underline;
 }
+
 /* ====================== Map ====================== */
 #map {
   height: 400px;
@@ -128,7 +132,6 @@ nav h1 a {
   font-family: Arial,sans-serif;
   font-size: 1.2em;
   height: 35px;
-  letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
   width: 200px;
@@ -170,13 +173,14 @@ nav h1 a {
 #restaurants-list li h1 {
   color: #252831;
   font-size: 1.5em;
-  letter-spacing: 0;
   line-height: 1.1em;
   margin: 20px 0 10px;
 }
 #restaurants-list p {
   margin: 0;
-  font-size: .9em;
+  font-size: 1.1em;
+	line-height:1.5em;
+
 }
 #restaurants-list li a {
   background-color: #21b5d6;
@@ -209,30 +213,34 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+#maincontent.indv-restaurant {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+}
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 90.5vh;
   position: fixed;
   right: 0;
   top: 80px;
   width: 50%;
+	order: 2;
+	z-index: 1;
 }
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}
 #restaurant-name {
   color: #21b5d6;
-  font-size: 1.2em;
-  font-weight: 200;
-  letter-spacing: 0;
-  margin: 15px 0 30px;
+  font-size: 2.2em;
+  font-weight: 700;
+  letter-spacing: 1px;
+  margin: 15px 0 0;
   text-transform: uppercase;
   line-height: 1.1;
 }
@@ -240,36 +248,48 @@ nav h1 a {
 	width: 90%;
 }
 #restaurant-address {
-  font-size: .9em;
-  margin: 10px 0px;
+  font-size: 1.1em;
+	margin: 5px 0 20px 0;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 700;
 }
 #restaurant-cuisine {
   background-color: #333;
-  color: #ddd;
-  font-size: .9em;
-  font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
-  padding: 2px 0;
-  text-align: center;
+  color: #fff;
+	border-bottom: 5px solid #21b5d6;
+  font-size: 1.3em;
+  font-weight: 500;
+  letter-spacing: 5px;
+  margin: 0 0 10px;
+  padding: 15px 0 15px 15px;
+  text-align: left;
   text-transform: uppercase;
-	width: 90%;
+	width: calc(90% - 15px);
 }
-#restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
-}
-#reviews-container {
-  padding: 30px 40px 80px;
+#restaurant-container {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	order: 1;
+	position: relative;
+	top: 130px;
+	background-color: #f3f3f3;
+  min-height: 100%;
+	padding-bottom: 100px;
+	margin: 20px;
 }
 #reviews-container h2 {
-  color: #f58500;
-  font-size: 1.4em;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+	background-color: #333;
+  color: #fff;
+	border-bottom: 5px solid #21b5d6;
+  font-size: 1.3em;
+  font-weight: 500;
+  letter-spacing: 5px;
+  margin-top: 20px;
+  padding: 15px;
+	width: 90%;
+	text-transform: uppercase;
 }
 #reviews-list {
   margin: 0;
@@ -277,20 +297,39 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: 0 0 10px;
   overflow: hidden;
-  padding: 0 20px 20px;
-  position: relative;
-  width: 85%;
+  padding: 20px;
+  width: 88.5%;
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, .1);
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
+#restaurant-hours {
+	margin: 10px 20px;
+}
 #restaurant-hours td {
-  color: #666;
+  color: #333;
+	font-size: 1.1em;
+	padding: 8px 0;
+}
+.review-name {
+	font-size: 1.1em;
+	line-height: 1.2em;
+	font-weight: 700;
+	border-bottom: 2px solid #f3f3f3;
+	padding-bottom: 5px;
+}
+.review-comments {
+	font-size: 1.3em;
+	line-height: 1.4em;
+}
+#restaurant-hours-head {
+	margin: 10px 20px 0;
+	font-size: 1.4em;
 }
 
 @media (max-width: 850px) {
